# alpg

./: .gitignore  pyproject.toml
alpg/: configLoader.py  devices.py  heatdemand.py  households.py  houses.py  neighbourhood.py  persons.py  profilegenerator.py  writer.py
configs/: example.py
