[project]
name = "alpg"
version = "0.1.0"
description = ""
authors = [
    {name = "Dolf Andringa",email = "dolf@wepositive.energy"}
]
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "wepositive_types"}]
dependencies = ["astral (==1.10.1)", "ruff (>=0.12.0,<0.13.0)", "pyright (>=1.1.402,<2.0.0)", "typer (>=0.16.0)"]

[tool.poetry.scripts]
profilegenerator= "alpg.profilegenerator:app"

[tool.poetry]
package-mode = true


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
